# knowledge-base

./: .gitignore  .gitlab-ci.yml  changelog.md  comparators.json  config.yaml  index-dynamic.html  index.html  isr_tasks.md  manifest.json  manifest.yaml  measures.json  metadata.json  motivational_potential_model.csv  mpog_local_manifest.yaml  mpog_manifest.yaml  mpog_pathways.json  mpog_templates.json  mvc_local_manifest.yaml  preferences.json  readme.md
causal_pathways/: .goal_worse.json.swp  bench_achievement.json  bench_diff.json  consistent_high.json  consistent_low.json  goal_achievement.json  goal_approach.json  goal_better.json  goal_diff.json  goal_gain.json  goal_loss.json  goal_stayed_better.json  readme.md  (+14 more)
prioritization_algorithms/esteemer/: pyproject.toml
prioritization_algorithms/esteemer/esteemer/: esteemer.py
prioritization_algorithms/esteemer/esteemer/signals/: _history.py
prioritization_algorithms/esteemer/tests/: test_esteemer.py  test_esteemer_over_periods.py  test_history.py  test_history_over_periods.py
prioritization_algorithms/mpm_prioritization/: pyproject.toml
prioritization_algorithms/mpm_prioritization/mpm_prioritization/: mpm_prioritization_algorithm.py  utils.py
prioritization_algorithms/mpm_prioritization/mpm_prioritization/signals/: __init__.py
prioritization_algorithms/mpm_prioritization/tests/: test_esteemer.py  test_esteemer_over_periods.py  test_history.py  test_history_over_periods.py  test_it_works.py
prioritization_algorithms/random_candidate_selector/: README.md  index.html  metadata.json  pyproject.toml  random_candidate_selector.py
prioritization_algorithms/random_candidate_selector/tests/: README.md  test_random_candidate_delector.py  test_random_candidate_selector.py
(+124 files in other folders)
