[tool.poetry]
name = "random-candidate-selector"
version = "0.2.0"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
